// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component: BooleanIcon ui value false 1`] = `
<div>
  <i
    class="icon material-icons material-icons__filled"
  >
    check_box_outline_blank
  </i>
</div>
`;

exports[`Component: BooleanIcon ui value true 1`] = `
<div>
  <i
    class="icon material-icons material-icons__filled"
  >
    check_box
  </i>
</div>
`;
